update session cookies
