# api/swagger.yaml
@@ -145,86 +145,6 @@ definitions:
     additionalProperties:
       $ref: "#/definitions/Permissions"
 
-  AuthRequest:
-    description: |
-      An AuthRequest is generated by the `/authorize` call and passed to the `app_uri`.
-      The properties of AuthRequest map to the parameters of the `/authorize` operation.
-      This request is encoded and signed by the authorization service and must be passed
-      in the POST to `/login` to validate the authentication request.
-    type: "object"
-    required: ["client_id", "redirect_uri", "audience", "code_challenge"]
-    properties:
-      client_id:
-        type: "string"
-        description: "The request client id"
-        x-nullable: false
-      redirect_uri:
-        type: "string"
-        description: "The request redirect uri"
-        x-nullable: false
-      scope:
-        $ref: "#/definitions/Permissions"
-      audience:
-        type: "string"
-        description: "The request audience"
-        x-nullable: false
-      user_pool:
-        type: "string"
-        description: "The request user pool"
-        x-nullable: true
-      state:
-        type: "string"
-        description: "The request state"
-        x-nullable: true
-      code_challenge:
-        type: "string"
-        description: "The request code challenge"
-        x-nullable: false
-      code_challenge_method:
-        type: "string"
-        description: "The request code challenge method"
-        enum: ["S256"]
-      expires_at:
-        type: integer
-        description: "The request expiration epoch"
-        format: "int64"
-
-  AuthCode:
-    description: |
-      Authcodes are used by client in browser based flows to request BearerTokens
-
-      Internally Authcodes are associated with an AuthRequest, which are not
-      persisted until after authentication has completed successfully.
-
-      Additionally, the library uses AuthCodes to:
-        - store refresh tokens used when a client request offline_access.
-        - reset user passwords
-    allOf:
-      - $ref: "#/definitions/AuthRequest"
-      - type: "object"
-        properties:
-          code:
-            type: "string"
-            description: "The auth code value provided by the CodeStore"
-          session_id:
-            type: "string"
-            description: "The session id"
-          subject:
-            type: "string"
-            description: "The session subject"
-          issued_at:
-            type: "integer"
-            description: "The time the code was issued on"
-            format: "int64"
-          refresh_nonce:
-            type: "string"
-            description: "The refresh token nonce"
-          user_authenticated:
-            type: "boolean"
-            description: |
-              If this is false the session was created in am SSO flow without capture user credentials
-              Some audiences may request credentials
-
   Application:
     description: |
       Applications are API clients that access APIs managed by the integration
@@ -615,6 +535,10 @@ paths:
           type: "string"
           description: "The client id"
           in: "query"
+          required: true
+        - name: "audience"
+          in: "query"
+          type: "string"
           required: true
         - name: "state"
           type: "string"
@@ -1093,7 +1017,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
       security:
-        - OAuth: ["openid", "principal"]
+        - OAuth: ["openid", "profile"]
 
   /userInfo:
     get:
