# pkg/oauth/auth_request.go
@@ -1,9 +1,4 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
 package oauth
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
 
 import (
 	"database/sql/driver"
@@ -22,7 +17,6 @@ import (
 // in the POST to `/login` to validate the authentication request.
 //
 //
-// swagger:model AuthRequest
 type AuthRequest struct {
 
 	// The request audience
